-Removed ng-route because PhaserJS would not work when returning to the homepage. Opted to use ng-show instead based off of nav-bar item selected. -In order to accomondate the above change, template script tags had to be removed as well as route config. Each page is currently a large <div> in index.html which will be split out separately soon into other files. -Removed unnecessary div tags and fixed tab formatting across the board for readability, -Added much needed comments -Created Readme with project info

--- a/content/css/pettycash.css
+++ b/content/css/pettycash.css
@@ -29,7 +29,7 @@ ul {
 .navBarDemo {
   padding: 15px;
 }
-
+/*wrapper for tweaking the position of Apple sign in buttons*/
 #displayed-username {
   min-width: 170px;
   padding-top: 13px;
@@ -42,15 +42,14 @@ ul {
   padding: 20px;
   margin-bottom: 10px;
 }
+/*HTML5 flex box alignment container*/
 .Aligner {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/*.Aligner-item {
-  max-width: 50%;
-}*/
+/*expense item colors*/
 .color-green {
   color: green;
 }
